# smart-fishery

./: .gitignore  README.md  dev.py  pageAgent说明文档.md  技术介绍与开发文档.md
backend/: .gitignore  README.md  auth.py  main.py  pyproject.toml  routers.py  seed_data.py
backend/algorithms/: prediction.py
backend/app/: main.py
backend/app/agent/: config.py  context_builder.py  llm_service.py  mock_data.py  preview_store.py  real_data.py  router.py  schemas.py  suggestion_service.py  tool_registry.py
backend/app/ai/: __init__.py  context_builder.py  llm_service.py  mock_data.py  router.py  schemas.py  suggestion_service.py  tool_registry.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  security.py
backend/app/crud/: crud_water.py  crud_water_async.py
backend/app/db/: async_session.py  insert_fdata.py  session.py
backend/app/models/: base.py  user.py  water.py
backend/app/schemas/: base.py  growth.py  user.py  water.py
backend/app/services/: smart_feeding.py  water_analysis.py  water_quality_dashboard.py  weather_service.py
backend/app/tasks/: scheduler.py
backend/app/test/: db_test.py
backend/app/websocket/: manager.py  routes.py
backend/crud/: crud_water.py
backend/data/: smart_fishery_db.db
backend/models/: user.py  water.py
backend/schemas/: user.py  water.py
backend/services/: water_analysis.py
backend/test/: test_agent_real_data.py  test_ai_routes.py  test_auth_user_endpoints.py  test_manual_feeding_security.py  test_water_quality_dashboard.py
backend/tests/api/: test_growth_detect.py
backend/tools/: evaluate_growth_model.py
(+188 files in other folders)
